devops/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapplication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapplication
  template:
    metadata:
      labels:
        app: demoapplication
    spec:
      containers:
      - name: demoapplication
        image: mypocacr379.azurecr.io/demo/demoapplication:latest
        ports:
        - containerPort: 8080
