devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapplication
  labels: 
    app: demoapplication
spec:
  selector:
    app: demoapplication
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
