devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresscontroller
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /demoapplication
        pathType: Prefix
        backend:
          service:
            name: demoapplication
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: demoapplication
            port:
              number: 80
